<resources>
    <string name="app_name">Trabalho</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Menu Principal</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="gel_nails">gel nails</string>
    <string name="bride_makeup">bride makeup</string>
    <string name="todo">TODO</string>
    <string name="appointments">appointments</string>
    <string name="services_and_price">services_and_price</string>
    <string name="verniz_gel">verniz_gel</string>
    <string name="makeup_social">makeup_social</string>
    <string name="depilacao_rosto">depilacao_rosto</string>
    <string name="pedicure">pedicure</string>
    <string name="lifting">lifting</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="nome">Nome</string>
    <string name="telemovel">Telemovel</string>
    <string name="horas">Horas</string>
    <string name="servico">Servico</string>
    <string name="marcar">Marcar</string>
    <string name="dia">Dia</string>
    <string name="see_appointments">SEE APPOINTMENTS</string>
    <string name="face_depilation">Face Depilation</string>
    <string name="verniz_gel_">Verniz Gel</string>
    <string name="makeup_social_">Makeup Social</string>
    <string name="name">name</string>
    <string name="service">service</string>
    <string name="hours">hours</string>
    <string name="phone">phone</string>
    <string name="day">day/month/year</string>
    <string name="back">back</string>
    <string name="Name">Name</string>
    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
    <string name="fragment_ver_appointment" />
    <string name="fragment_lista_client" >Clients</string>
    <string name="client">Client</string>
    <string name="email" />
    <string name="fragment_editar_client" />
    <string name="guardar" />
    <string name="cancelar" />
    <string name="fragment_eliminar_client" >Eliminar Client</string>
    <string name="eliminar_client_lable" />
    <string name="fragment_lista_service" >Services</string>
    <string name="TypeService" />
    <string name="fragment_editar_service" />
    <string name="appointment_obrigatoria" />
    <string name="time" />
    <string name="duration">duration</string>
    <string name="date" />
    <string name="fragment_editar_appointment" />
    <string name="Date">date</string>
    <string name="Email">Email</string>
    <string name="Service">service</string>
    <string name="fragment_lista_appoitment">Apointments</string>
    <string name="eliminar_appointment">Eliminar Appointment</string>
    <string name="eliminar_client">Eliminar Client</string>
    <string name="eliminar_service">Eliminar Service</string>
    <string name="service_obrigatorio">service obrigatorio</string>
    <string name="service_guardado_sucesso">service guardado com sucesso</string>
    <string name="erro_guardar_service">erro ao guardar service</string>
    <string name="nome_obrigatorio">nome obrigatorio</string>
    <string name="phone_obrigatorio">phone obrigatorio</string>
    <string name="email_obrigatorio">email obrigatorio</string>
    <string name="client_guardado_sucesso">client guardado com sucesso</string>
    <string name="erro_guardar_client">erro ao guardar client</string>
    <string name="appointment_name_obrigatorio">appointment name obrigatorio</string>
    <string name="time_obrigatorio">time obrigatorio</string>
    <string name="day_obrigatorio">day obrigatorio</string>
    <string name="Appointment_guardado_sucesso">Appointment guardado com sucesso</string>
    <string name="erro_guardar_appointment_name">erro ao guardar appointment name</string>
    <string name="eliminar_appointment_label">Eliminar Appointment</string>
    <string name="confirma_eliminar_appointment">Quer mesmo eliminar appointment</string>
    <string name="appointment_eliminado_sucesso">appointment eliminado com sucesso</string>
    <string name="erro_eliminar_service">erro ao eliminar service</string>
    <string name="inserir_appointment_label">Inserir Appointment</string>
    <string name="alterar_appointment_label">Alterar Appointment</string>
    <string name="confirma_eliminar_client">Tem a certeza que quer eliminar Client?</string>
    <string name="client_eliminado_sucesso">client eliminado com sucesso</string>
    <string name="eliminar_service_label">Eliminar Service</string>
    <string name="confirma_eliminar_service">Tem a certeza que quer eliminar service?</string>
    <string name="service_eliminado_sucesso">service eliminado com sucesso</string>
    <string name="inserir_client_label">Inserir Client</string>
    <string name="alterar_client_label">Alterar Client</string>
    <string name="inserir_service_label">Inserir Service</string>
    <string name="alterar_service_label">Alterar Service</string>
    <string name="eliminar_client_label">Eliminar Client</string>
    <string name="erro_eliminar_client">erro ao eliminar client</string>
    <string name="erro_eliminar_appointment">erro ao eliminar appointment</string>
    <string name="client_obrigatoria">client obrigatoria</string>
</resources>