<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADC86473"
    tools:context=".SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-68dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logo"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTelemovel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextServices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/service"
                            android:inputType="textPersonName"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp"
                            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextHoras"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:hint="@string/hours"
                                android:inputType="datetime"
                                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/textViewDia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/day"
                            android:textSize="18sp"
                            tools:ignore="TextContrastCheck" />

                        <CalendarView
                            android:id="@+id/calendarViewDataNascimento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/buttonEnviar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#00F3F3F3"
                            android:text="@string/marcar"
                            tools:ignore="TextContrastCheck" />

                        <Button
                            android:id="@+id/buttonEnviar2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="#00FFFFFF"
                            android:text="@string/back"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>